{
  "version": 4,
  "terraform_version": "1.12.1",
  "serial": 18,
  "lineage": "dd2ba852-32a0-c0e8-926c-de5c081d3b41",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "k8s_external",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [
                  "30000-32767"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [
                  "6443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2026-04-10T10:10:28.290-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/gen-ai-pritha/global/firewalls/k8s-external",
            "log_config": [],
            "name": "k8s-external",
            "network": "https://www.googleapis.com/compute/v1/projects/gen-ai-pritha/global/networks/k8s-network",
            "priority": 1000,
            "project": "gen-ai-pritha",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gen-ai-pritha/global/firewalls/k8s-external",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "k8s-node"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.k8s"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "k8s_internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "icmp"
              },
              {
                "ports": [],
                "protocol": "tcp"
              },
              {
                "ports": [],
                "protocol": "udp"
              }
            ],
            "creation_timestamp": "2026-04-10T10:10:29.249-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/gen-ai-pritha/global/firewalls/k8s-internal",
            "log_config": [],
            "name": "k8s-internal",
            "network": "https://www.googleapis.com/compute/v1/projects/gen-ai-pritha/global/networks/k8s-network",
            "priority": 1000,
            "project": "gen-ai-pritha",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gen-ai-pritha/global/firewalls/k8s-internal",
            "source_ranges": [],
            "source_service_accounts": [],
            "source_tags": [
              "k8s-node"
            ],
            "target_service_accounts": [],
            "target_tags": [
              "k8s-node"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.k8s"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "control_plane",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2204-jammy-v20260313",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 50,
                    "type": "pd-ssd"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/gen-ai-pritha/zones/asia-south1-a/disks/control-plane"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/gen-ai-pritha/zones/asia-south1-a/instances/control-plane",
            "instance_id": "1472415852727144823",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-standard-2",
            "metadata": {
              "enable-oslogin": "TRUE"
            },
            "metadata_fingerprint": "H2aCDf3hrs0=",
            "name": "control-plane",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.100.176.181",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/gen-ai-pritha/global/networks/k8s-network",
                "network_ip": "10.0.1.3",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/gen-ai-pritha/regions/asia-south1/subnetworks/k8s-subnet",
                "subnetwork_project": "gen-ai-pritha"
              }
            ],
            "project": "gen-ai-pritha",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/gen-ai-pritha/zones/asia-south1-a/instances/control-plane",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "k8s-node"
            ],
            "tags_fingerprint": "PMlaEWobTyo=",
            "zone": "asia-south1-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.k8s",
            "google_compute_subnetwork.k8s"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "worker_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2204-jammy-v20260313",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 100,
                    "type": "pd-ssd"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/gen-ai-pritha/zones/asia-south1-a/disks/worker-1"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/gen-ai-pritha/zones/asia-south1-a/instances/worker-1",
            "instance_id": "6028201952674091384",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-standard-8",
            "metadata": {
              "enable-oslogin": "TRUE"
            },
            "metadata_fingerprint": "H2aCDf3hrs0=",
            "name": "worker-1",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.100.254.230",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/gen-ai-pritha/global/networks/k8s-network",
                "network_ip": "10.0.1.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/gen-ai-pritha/regions/asia-south1/subnetworks/k8s-subnet",
                "subnetwork_project": "gen-ai-pritha"
              }
            ],
            "project": "gen-ai-pritha",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/gen-ai-pritha/zones/asia-south1-a/instances/worker-1",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "k8s-node"
            ],
            "tags_fingerprint": "PMlaEWobTyo=",
            "zone": "asia-south1-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.k8s",
            "google_compute_subnetwork.k8s"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "worker_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2204-jammy-v20260313",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 50,
                    "type": "pd-ssd"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/gen-ai-pritha/zones/asia-south1-a/disks/worker-2"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/gen-ai-pritha/zones/asia-south1-a/instances/worker-2",
            "instance_id": "1887956210652843722",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-standard-2",
            "metadata": {
              "enable-oslogin": "TRUE"
            },
            "metadata_fingerprint": "H2aCDf3hrs0=",
            "name": "worker-2",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.93.232.58",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/gen-ai-pritha/global/networks/k8s-network",
                "network_ip": "10.0.1.5",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/gen-ai-pritha/regions/asia-south1/subnetworks/k8s-subnet",
                "subnetwork_project": "gen-ai-pritha"
              }
            ],
            "project": "gen-ai-pritha",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/gen-ai-pritha/zones/asia-south1-a/instances/worker-2",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "k8s-node"
            ],
            "tags_fingerprint": "PMlaEWobTyo=",
            "zone": "asia-south1-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.k8s",
            "google_compute_subnetwork.k8s"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "k8s",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/gen-ai-pritha/global/networks/k8s-network",
            "mtu": 0,
            "name": "k8s-network",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "numeric_id": "7037769865690910744",
            "project": "gen-ai-pritha",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gen-ai-pritha/global/networks/k8s-network"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "k8s",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2026-04-10T10:12:32.362-07:00",
            "gateway_address": "10.0.1.1",
            "id": "projects/gen-ai-pritha/regions/asia-south1/subnetworks/k8s-subnet",
            "ip_cidr_range": "10.0.1.0/24",
            "name": "k8s-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/gen-ai-pritha/global/networks/k8s-network",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "gen-ai-pritha",
            "purpose": "PRIVATE",
            "region": "asia-south1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gen-ai-pritha/regions/asia-south1/subnetworks/k8s-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.k8s"
          ]
        }
      ]
    }
  ]
}